--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Gazi Fahim Abrar # your name (or website title) here
-logo: "/images/my_pic.JPG?raw=true" # your photo (or logo) here ADD PHOTO
+logo: "https://github.com/gzee3184/abrar.github.io/blob/main/images/410855248_331414356388812_3842196822775866671_n.jpg?raw=true" # your photo (or logo) here ADD PHOTO
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Aspiring software engineer looking for enhanced real-world experience. Has experience with data-oriented programming, computational architecture, and machine learning and is eager to learn more through an internship
   <br><br>
